WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77945
[Qt] Prevent early test termination with newer Qt 5
https://bugs.webkit.org/show_bug.cgi?id=77945
Summary
[Qt] Prevent early test termination with newer Qt 5
Simon Hausmann
Reported
2012-02-07 01:23:12 PST
[Qt] Prevent early test termination with newer Qt 5
Attachments
Patch
(1.42 KB, patch)
2012-02-07 01:25 PST
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-02-07 01:25:01 PST
Created
attachment 125782
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-02-07 02:14:56 PST
Comment on
attachment 125782
[details]
Patch r=me. Thanks for the fix.
WebKit Review Bot
Comment 3
2012-02-07 03:21:24 PST
Comment on
attachment 125782
[details]
Patch Clearing flags on attachment: 125782 Committed
r106919
: <
http://trac.webkit.org/changeset/106919
>
WebKit Review Bot
Comment 4
2012-02-07 03:21:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug