[Qt] Prevent early test termination with newer Qt 5 https://bugs.webkit.org/show_bug.cgi?id=77945

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-02-07
Reviewed by Csaba Osztrogonác.

QTBUG-24120 tracks a regression in Qt that would make layout tests
terminate early. This patch works around it in a Qt 4 + 5 safe manner
by disabling the quitOnLastWindowClosed feature, which we don't want/need
for DRT anyway.

* DumpRenderTree/qt/main.cpp:
(main): Don't quit on last window closed.

Canonical link: https://commits.webkit.org/94837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106919 268f45cc-cd09-0410-ab3c-d52691b4dbfc